# rs_file_ms

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.doc/: base.excalidraw
.k8s/: deployment.yml
file_app/: Cargo.toml
file_app/src/: fs.rs  inspector.rs  lib.rs  mime.rs  resizer.rs
src/: main.rs
src/application/: mod.rs
src/application/controller/: mod.rs
src/domain/: mod.rs
src/domain/controller/v1/: file.rs  mod.rs
src/infra/: mod.rs
