[package]
name = "file_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_app = { path = "./file_app" }
actix-multipart = "0.7.2"
actix-web = "4.9.0"
tokio = { version = "1.41.1", features = ["full"] }
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
env_logger = "0.11.3"
uuid = { version = "1.11.0", features = ["v4"] }
